# ruspiro

./: .gitmodules  Cargo.toml  README.md  build.sh
.cargo/: config
kernel/: Cargo.toml  build.rs
kernel/src/: kernel.rs  talentthought.rs
talents/: Cargo.toml
talents/src/: behavior.rs  capability.rs  lib.rs  talents.rs
tests/: Cargo.toml  test.sh
tests/.cargo/: config
tests/gpio/: Cargo.toml  build.rs
tests/gpio/src/: kernel.rs
tests/plugin/: Cargo.toml
tests/plugin/.cargo/: config
tests/plugin/src/: lib.rs
