[package]
name = "gpio"
version = "0.0.0"
publish = false
edition = "2018"

[[bin]]
name = "kernel"
path = "./src/kernel.rs"

[dependencies]
ruspiro-boot = { version = "0.3", features = ["singlecore", "ruspiro_pi3"] }
ruspiro-allocator = "0.4"
ruspiro-gpio = { version = "0.4", features = ["ruspiro_pi3"] }
ruspiro-interrupt = "0.3"
ruspiro-singleton = "0.3"